# mathreport

./: .gitignore  TEST_SKELETON_REPORT.md
backend/: .dockerignore  .env.example  Dockerfile  analyze_feedback.py  check_user.py  create_test_user.py  debug_analysis.py  debug_delete.py  list_models.py  migrate_mock_data.py  pyproject.toml  pytest.ini  railway.json  recreate_tables.py  requirements.txt  seed_patterns.py  set_master.py  test_result.txt
backend/alembic/: env.py
backend/alembic/versions/: 1c76a74274e9_add_suggested_title_extracted_grade.py  20260123_100320_create_user_table.py  20260124_add_analysis_extensions.py  20260125_add_exam_detected_subject.py  20260125_add_exam_error_message.py  20260125_add_exam_metadata.py  20260125_add_feedbacks_table.py  20260125_add_question_references.py  20260125_add_user_subscription_fields.py  20260126_add_analysis_step.py  20260126_add_feedback_fields.py  20260126_add_pattern_tables.py  20260126_add_school_fields.py  20260126_add_school_trends.py  20260126_add_user_badges.py  20260126_add_user_template.py  20260126_update_credits_default.py  20260127_add_security_logs.py  20260128_add_exam_category.py  243364f0c7df_add_grading_status.py  96c31afea73c_add_exam_type.py  c0f6b4cc5a65_add_detected_type_to_exam.py  df53cb237e61_add_analysis_tables.py  e2f4f30bf5d7_add_pattern_system_tables.py
backend/app/: main.py  test_main.py
backend/app/core/: config.py  deps.py  security.py
backend/app/db/: session.py  supabase_client.py
backend/app/models/: __init__.py  ai_learning.py  analysis.py  exam.py  reference.py  school_trends.py  user.py
backend/app/schemas/: analysis.py  auth.py  exam.py  feedback.py  pattern.py  reference.py  subscription.py  template.py  user.py
backend/app/services/: ai_engine.py  ai_learning.py  analysis.py  analytics_log.py  auth.py  badge.py  credit_log.py  exam.py  file_storage.py  prompt_builder.py  prompt_config.py  school_trends.py  (+5 more)
backend/scripts/: make_admin.py  seed_grading_patterns.py  seed_patterns.py
backend/test_files/: analysis_result.json
backend/tests/: README.md  conftest.py  test_grading_optimization.py  test_sample.py
(+213 files in other folders)
